Add mask to gallery: My Mask

--- a/durrell-masks/manifest.json
+++ b/durrell-masks/manifest.json
@@ -15,6 +15,29 @@
           "y": 0.5527132799860073
         }
       }
+    },
+    {
+      "id": "mask-1769106894390",
+      "name": "My Mask",
+      "image": "durrell-masks/images/mask-1769106894390.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.4277326106594399,
+          "y": 0.5589430894308943
+        },
+        "rightEye": {
+          "x": 0.5910746812386156,
+          "y": 0.5532786885245902
+        },
+        "leftMouth": {
+          "x": 0.4548978153629316,
+          "y": 0.6638477801268498
+        },
+        "rightMouth": {
+          "x": 0.582687338501292,
+          "y": 0.6638477801268498
+        }
+      }
     }
   ]
 }
