Add mask to gallery: My Mask

--- a/durrell-masks/manifest.json
+++ b/durrell-masks/manifest.json
@@ -53,6 +53,26 @@
           "y": 0.4729546547728366
         }
       }
+    },
+    {
+      "id": "mask-1769167663966",
+      "name": "My Mask",
+      "image": "durrell-masks/images/mask-1769167663966.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.3652094717668488,
+          "y": 0.48770491803278687
+        },
+        "rightEye": {
+          "x": 0.6457194899817851,
+          "y": 0.4938524590163934
+        },
+        "leftMouth": {
+          "x": 0.3229448961156278,
+          "y": 0.48983739837398377
+        },
+        "rightMouth": null
+      }
     }
   ]
 }
