Update manifest: add My Mask

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -15,6 +15,21 @@
           "y": 0.6296733569460842
         }
       }
+    },
+    {
+      "id": "mask-1769216194911",
+      "name": "My Mask",
+      "image": "groups/public/images/mask-1769216194911.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.40049751243781095,
+          "y": 0.6212777121868032
+        },
+        "rightEye": {
+          "x": 0.6567164179104479,
+          "y": 0.6142813415540689
+        }
+      }
     }
   ]
 }
