--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -45,6 +45,21 @@
           "y": 0.5485154576063668
         }
       }
+    },
+    {
+      "id": "mask-1769249891902",
+      "name": "iPhone-Jan24-1018",
+      "image": "groups/public/images/mask-1769249891902.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.44527363184079605,
+          "y": 0.5107350561896017
+        },
+        "rightEye": {
+          "x": 0.6218905472636816,
+          "y": 0.5205299750754296
+        }
+      }
     }
   ]
 }
