Update manifest: add iPhone-Jan25-0100

--- a/groups/pig-masks/manifest.json
+++ b/groups/pig-masks/manifest.json
@@ -30,6 +30,21 @@
           "y": 0.62267698631335
         }
       }
+    },
+    {
+      "id": "mask-1769302831255",
+      "name": "iPhone-Jan25-0100",
+      "image": "groups/pig-masks/images/mask-1769302831255.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6276948590381427,
+          "y": 0.5839637354788869
+        },
+        "rightEye": {
+          "x": 0.3938640132669983,
+          "y": 0.5834973107700381
+        }
+      }
     }
   ]
 }
