Update manifest: add My Mask

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -75,6 +75,21 @@
           "y": 0.3945953036862128
         }
       }
+    },
+    {
+      "id": "mask-1769302901029",
+      "name": "My Mask",
+      "image": "groups/public/images/mask-1769302901029.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5878938640132669,
+          "y": 0.621744136895652
+        },
+        "rightEye": {
+          "x": 0.37893864013267,
+          "y": 0.6166134650983135
+        }
+      }
     }
   ]
 }
