--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -75,6 +75,21 @@
           "y": 0.6166134650983135
         }
       }
+    },
+    {
+      "id": "mask-1769302929203",
+      "name": "iPhone-Jan24-1210",
+      "image": "groups/public/images/mask-1769302929203.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6061359867330016,
+          "y": 0.3922631801419679
+        },
+        "rightEye": {
+          "x": 0.4021558872305141,
+          "y": 0.3848003848003848
+        }
+      }
     }
   ]
 }
