Update manifest: add My Mask

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -75,6 +75,21 @@
           "y": 0.3848003848003848
         }
       }
+    },
+    {
+      "id": "mask-1769302954526",
+      "name": "My Mask",
+      "image": "groups/public/images/mask-1769302954526.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6683250414593698,
+          "y": 0.612415642718673
+        },
+        "rightEye": {
+          "x": 0.35074626865671643,
+          "y": 0.6100835191744284
+        }
+      }
     }
   ]
 }
