Update manifest: add iPhone-Jan24-1934

--- a/groups/pig-masks/manifest.json
+++ b/groups/pig-masks/manifest.json
@@ -30,6 +30,21 @@
           "y": 0.6100835191744284
         }
       }
+    },
+    {
+      "id": "mask-1769303089377",
+      "name": "iPhone-Jan24-1934",
+      "image": "groups/pig-masks/images/mask-1769303089377.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6633499170812603,
+          "y": 0.48554812191175833
+        },
+        "rightEye": {
+          "x": 0.39800995024875624,
+          "y": 0.49814158905067996
+        }
+      }
     }
   ]
 }
