Update manifest: add iPhone-Jan25-1148

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -105,6 +105,21 @@
           "y": 0.3899253731343284
         }
       }
+    },
+    {
+      "id": "mask-1769341715172",
+      "name": "iPhone-Jan25-1148",
+      "image": "groups/public/images/mask-1769341715172.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5729274194973654,
+          "y": 0.39849983483953966
+        },
+        "rightEye": {
+          "x": 0.44368603931928496,
+          "y": 0.3942518611882681
+        }
+      }
     }
   ]
 }
