--- a/groups/good-acd3b-masks/manifest.json
+++ b/groups/good-acd3b-masks/manifest.json
@@ -15,6 +15,21 @@
           "y": 0.6166134650983135
         }
       }
+    },
+    {
+      "id": "mask-1769341793650",
+      "name": "iPhone-Jan25-1149",
+      "image": "groups/good-acd3b-masks/images/mask-1769341793650.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6061359867330016,
+          "y": 0.3922631801419679
+        },
+        "rightEye": {
+          "x": 0.4021558872305141,
+          "y": 0.3848003848003848
+        }
+      }
     }
   ]
 }
