--- a/groups/good-acd3b-masks/manifest.json
+++ b/groups/good-acd3b-masks/manifest.json
@@ -30,6 +30,21 @@
           "y": 0.3848003848003848
         }
       }
+    },
+    {
+      "id": "mask-1769341804387",
+      "name": "iPhone-Jan25-1150",
+      "image": "groups/good-acd3b-masks/images/mask-1769341804387.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6683250414593698,
+          "y": 0.612415642718673
+        },
+        "rightEye": {
+          "x": 0.35074626865671643,
+          "y": 0.6100835191744284
+        }
+      }
     }
   ]
 }
