Update manifest: add iPhone-Jan25-1150

--- a/groups/good-acd3b-masks/manifest.json
+++ b/groups/good-acd3b-masks/manifest.json
@@ -45,6 +45,21 @@
           "y": 0.6100835191744284
         }
       }
+    },
+    {
+      "id": "mask-1769341813753",
+      "name": "iPhone-Jan25-1150",
+      "image": "groups/good-acd3b-masks/images/mask-1769341813753.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6243781094527363,
+          "y": 0.40858804495168133
+        },
+        "rightEye": {
+          "x": 0.3855721393034826,
+          "y": 0.3987931260658534
+        }
+      }
     }
   ]
 }
