Update manifest: add iPhone-Jan25-1253

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -45,6 +45,21 @@
           "y": 0.5602025669942334
         }
       }
+    },
+    {
+      "id": "mask-1769345607796",
+      "name": "iPhone-Jan25-1253",
+      "image": "groups/public/images/mask-1769345607796.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.4391769302753439,
+          "y": 0.4622578238107101
+        },
+        "rightEye": {
+          "x": 0.3789386401326699,
+          "y": 0.4614427860696517
+        }
+      }
     }
   ]
 }
