Update manifest: add iPhone-Jan25-1254

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -60,6 +60,21 @@
           "y": 0.4614427860696517
         }
       }
+    },
+    {
+      "id": "mask-1769345667495",
+      "name": "iPhone-Jan25-1254",
+      "image": "groups/public/images/mask-1769345667495.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.4330504196536692,
+          "y": 0.1360408841273049
+        },
+        "rightEye": {
+          "x": 0.3790904372710379,
+          "y": 0.1362014313052167
+        }
+      }
     }
   ]
 }
