Update manifest: add iPhone-Jan25-1255

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -75,6 +75,21 @@
           "y": 0.1362014313052167
         }
       }
+    },
+    {
+      "id": "mask-1769345725181",
+      "name": "iPhone-Jan25-1255",
+      "image": "groups/public/images/mask-1769345725181.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.3756218905472637,
+          "y": 0.43345771144278605
+        },
+        "rightEye": {
+          "x": 0.44776119402985076,
+          "y": 0.43967661691542287
+        }
+      }
     }
   ]
 }
