Update manifest: add iPhone-Jan25-1303

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -90,6 +90,21 @@
           "y": 0.43967661691542287
         }
       }
+    },
+    {
+      "id": "mask-1769346223296",
+      "name": "iPhone-Jan25-1303",
+      "image": "groups/public/images/mask-1769346223296.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5348258706467662,
+          "y": 0.47201492537313433
+        },
+        "rightEye": {
+          "x": 0.40298507462686567,
+          "y": 0.47574626865671643
+        }
+      }
     }
   ]
 }
