--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -120,6 +120,21 @@
           "y": 0.42661691542288555
         }
       }
+    },
+    {
+      "id": "mask-1769346321435",
+      "name": "iPhone-Jan25-1305",
+      "image": "groups/public/images/mask-1769346321435.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6044776119402985,
+          "y": 0.4318465734142693
+        },
+        "rightEye": {
+          "x": 0.46351575456053057,
+          "y": 0.4318465734142693
+        }
+      }
     }
   ]
 }
