Update manifest: add iPhone-Jan25-1503

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -135,6 +135,21 @@
           "y": 0.4318465734142693
         }
       }
+    },
+    {
+      "id": "mask-1769353380064",
+      "name": "iPhone-Jan25-1503",
+      "image": "groups/public/images/mask-1769353380064.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.47346600331674954,
+          "y": 0.3653047847935329
+        },
+        "rightEye": {
+          "x": 0.2993366500829187,
+          "y": 0.36705265457723396
+        }
+      }
     }
   ]
 }
