Update manifest: add iPhone-Jan25-1503

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -135,6 +135,21 @@
           "y": 0.4318465734142693
         }
       }
+    },
+    {
+      "id": "mask-1769353420896",
+      "name": "iPhone-Jan25-1503",
+      "image": "groups/public/images/mask-1769353420896.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.49419568822553894,
+          "y": 0.35773068239749467
+        },
+        "rightEye": {
+          "x": 0.27114427860696516,
+          "y": 0.3612264219648969
+        }
+      }
     }
   ]
 }
