Update manifest: add iPhone-Jan25-1557

--- a/groups/pig-ewbky-masks/manifest.json
+++ b/groups/pig-ewbky-masks/manifest.json
@@ -30,6 +30,21 @@
           "y": 0.5130671797338464
         }
       }
+    },
+    {
+      "id": "mask-1769356650781",
+      "name": "iPhone-Jan25-1557",
+      "image": "groups/pig-ewbky-masks/images/mask-1769356650781.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5655058043117744,
+          "y": 0.43750637690031624
+        },
+        "rightEye": {
+          "x": 0.3366500829187396,
+          "y": 0.4281778827233373
+        }
+      }
     }
   ]
 }
