Update manifest: add iPhone-Jan25-1708

--- a/groups/pig-ewbky-masks/manifest.json
+++ b/groups/pig-ewbky-masks/manifest.json
@@ -45,6 +45,21 @@
           "y": 0.40159167431894705
         }
       }
+    },
+    {
+      "id": "mask-1769360897931",
+      "name": "iPhone-Jan25-1708",
+      "image": "groups/pig-ewbky-masks/images/mask-1769360897931.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6832504145936981,
+          "y": 0.420248662672905
+        },
+        "rightEye": {
+          "x": 0.3764510779436152,
+          "y": 0.4337749792295247
+        }
+      }
     }
   ]
 }
