Update manifest: add iPhone-Jan25-1610

--- a/groups/pig-ewbky-masks/manifest.json
+++ b/groups/pig-ewbky-masks/manifest.json
@@ -60,6 +60,21 @@
           "y": 0.4337749792295247
         }
       }
+    },
+    {
+      "id": "mask-1769360950011",
+      "name": "iPhone-Jan25-1610",
+      "image": "groups/pig-ewbky-masks/images/mask-1769360950011.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6697614251401113,
+          "y": 0.46355239678719057
+        },
+        "rightEye": {
+          "x": 0.48627641555013007,
+          "y": 0.46494089663828175
+        }
+      }
     }
   ]
 }
