Update manifest: add iPhone-Jan25-1547

--- a/groups/pig-ewbky-masks/manifest.json
+++ b/groups/pig-ewbky-masks/manifest.json
@@ -60,6 +60,21 @@
           "y": 0.4766860524436281
         }
       }
+    },
+    {
+      "id": "mask-1769361370335",
+      "name": "iPhone-Jan25-1547",
+      "image": "groups/pig-ewbky-masks/images/mask-1769361370335.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.631011608623549,
+          "y": 0.517731426822336
+        },
+        "rightEye": {
+          "x": 0.36401326699834163,
+          "y": 0.5130671797338464
+        }
+      }
     }
   ]
 }
