Update manifest: add iPhone-Jan25-1305

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -165,6 +165,21 @@
           "y": 0.3612264219648969
         }
       }
+    },
+    {
+      "id": "mask-1769361583343",
+      "name": "iPhone-Jan25-1305",
+      "image": "groups/public/images/mask-1769361583343.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6044776119402985,
+          "y": 0.4318465734142693
+        },
+        "rightEye": {
+          "x": 0.46351575456053057,
+          "y": 0.4318465734142693
+        }
+      }
     }
   ]
 }
