--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -165,6 +165,21 @@
           "y": 0.47574626865671643
         }
       }
+    },
+    {
+      "id": "mask-1769361629533",
+      "name": "iPhone-Jan25-1302",
+      "image": "groups/public/images/mask-1769361629533.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5091210613598673,
+          "y": 0.43718905472636815
+        },
+        "rightEye": {
+          "x": 0.35655058043117743,
+          "y": 0.43967661691542287
+        }
+      }
     }
   ]
 }
