Update manifest: add iPhone-Jan25-1256

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -165,6 +165,21 @@
           "y": 0.5607524803504703
         }
       }
+    },
+    {
+      "id": "mask-1769361654342",
+      "name": "iPhone-Jan25-1256",
+      "image": "groups/public/images/mask-1769361654342.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.4395637643391732,
+          "y": 0.45341071631539887
+        },
+        "rightEye": {
+          "x": 0.3864013266998341,
+          "y": 0.4527363184079602
+        }
+      }
     }
   ]
 }
