Update manifest: add iPhone-Jan25-1151

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -165,6 +165,21 @@
           "y": 0.5602025669942334
         }
       }
+    },
+    {
+      "id": "mask-1769361684084",
+      "name": "iPhone-Jan25-1151",
+      "image": "groups/public/images/mask-1769361684084.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5779436152570481,
+          "y": 0.4067164179104478
+        },
+        "rightEye": {
+          "x": 0.41625207296849087,
+          "y": 0.4098258706467661
+        }
+      }
     }
   ]
 }
