Update manifest: add iPhone-Jan24-1934

--- a/groups/pig-masks/manifest.json
+++ b/groups/pig-masks/manifest.json
@@ -45,6 +45,21 @@
           "y": 0.49814158905067996
         }
       }
+    },
+    {
+      "id": "mask-1769362943962",
+      "name": "iPhone-Jan24-1934",
+      "image": "groups/pig-masks/images/mask-1769362943962.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.654228855721393,
+          "y": 0.4855481219117583
+        },
+        "rightEye": {
+          "x": 0.4087893864013266,
+          "y": 0.4920780678356435
+        }
+      }
     }
   ]
 }
