Update manifest: add iPhone-Jan25-1858

--- a/groups/pig-ewbky-masks/manifest.json
+++ b/groups/pig-ewbky-masks/manifest.json
@@ -75,6 +75,21 @@
           "y": 0.45896191350736804
         }
       }
+    },
+    {
+      "id": "mask-1769367485949",
+      "name": "iPhone-Jan25-1858",
+      "image": "groups/pig-ewbky-masks/images/mask-1769367485949.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5804311774461027,
+          "y": 0.4359345669080182
+        },
+        "rightEye": {
+          "x": 0.36318407960199,
+          "y": 0.4366973570513394
+        }
+      }
     }
   ]
 }
