Update manifest: add iPhone-Jan25-1902

--- a/groups/pig-ewbky-masks/manifest.json
+++ b/groups/pig-ewbky-masks/manifest.json
@@ -90,6 +90,21 @@
           "y": 0.4366973570513394
         }
       }
+    },
+    {
+      "id": "mask-1769367776142",
+      "name": "iPhone-Jan25-1902",
+      "image": "groups/pig-ewbky-masks/images/mask-1769367776142.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5804311774461027,
+          "y": 0.4359345669080182
+        },
+        "rightEye": {
+          "x": 0.35157545605306795,
+          "y": 0.42983224576144924
+        }
+      }
     }
   ]
 }
