Update manifest: add iPhone-Jan25-1902

--- a/groups/pig-ewbky-masks/manifest.json
+++ b/groups/pig-ewbky-masks/manifest.json
@@ -105,6 +105,21 @@
           "y": 0.4272874966333709
         }
       }
+    },
+    {
+      "id": "mask-1769367878652",
+      "name": "iPhone-Jan25-1902",
+      "image": "groups/pig-ewbky-masks/images/mask-1769367878652.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6004110795167045,
+          "y": 0.4344238419550027
+        },
+        "rightEye": {
+          "x": 0.39303482587064675,
+          "y": 0.43288340633473366
+        }
+      }
     }
   ]
 }
