Update manifest: add iPhone-Jan25-1908

--- a/groups/pig-ewbky-masks/manifest.json
+++ b/groups/pig-ewbky-masks/manifest.json
@@ -105,6 +105,21 @@
           "y": 0.5476833229045618
         }
       }
+    },
+    {
+      "id": "mask-1769368144169",
+      "name": "iPhone-Jan25-1908",
+      "image": "groups/pig-ewbky-masks/images/mask-1769368144169.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.599502487562189,
+          "y": 0.5469205327612406
+        },
+        "rightEye": {
+          "x": 0.44195688225538965,
+          "y": 0.5476833229045618
+        }
+      }
     }
   ]
 }
