Update manifest: add iPhone-Jan25-1910

--- a/groups/pig-ewbky-masks/manifest.json
+++ b/groups/pig-ewbky-masks/manifest.json
@@ -105,6 +105,21 @@
           "y": 0.5476833229045618
         }
       }
+    },
+    {
+      "id": "mask-1769368238380",
+      "name": "iPhone-Jan25-1910",
+      "image": "groups/pig-ewbky-masks/images/mask-1769368238380.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5414593698175787,
+          "y": 0.5213670629599833
+        },
+        "rightEye": {
+          "x": 0.2512437810945274,
+          "y": 0.5263251988915706
+        }
+      }
     }
   ]
 }
