Update manifest: add iPhone-Jan25-1917

--- a/groups/pig-ewbky-masks/manifest.json
+++ b/groups/pig-ewbky-masks/manifest.json
@@ -135,6 +135,21 @@
           "y": 0.36423229343583313
         }
       }
+    },
+    {
+      "id": "mask-1769368666757",
+      "name": "iPhone-Jan25-1917",
+      "image": "groups/pig-ewbky-masks/images/mask-1769368666757.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.593698175787728,
+          "y": 0.37338577515568655
+        },
+        "rightEye": {
+          "x": 0.4079601990049751,
+          "y": 0.3722415899407049
+        }
+      }
     }
   ]
 }
