Update manifest: add iPhone-Jan25-1923

--- a/groups/pig-ewbky-masks/manifest.json
+++ b/groups/pig-ewbky-masks/manifest.json
@@ -135,6 +135,21 @@
           "y": 0.5263251988915706
         }
       }
+    },
+    {
+      "id": "mask-1769369024787",
+      "name": "iPhone-Jan25-1923",
+      "image": "groups/pig-ewbky-masks/images/mask-1769369024787.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6509121061359866,
+          "y": 0.5095438157385059
+        },
+        "rightEye": {
+          "x": 0.34162520729684903,
+          "y": 0.4858973212955513
+        }
+      }
     }
   ]
 }
