Update manifest: add iPhone-Jan26-1244

--- a/groups/g_L3g2nnyS4nDc/manifest.json
+++ b/groups/g_L3g2nnyS4nDc/manifest.json
@@ -47,6 +47,21 @@
           "y": 0.42661691542288555
         }
       }
+    },
+    {
+      "id": "mask-1769431469987",
+      "name": "iPhone-Jan26-1244",
+      "image": "groups/g_L3g2nnyS4nDc/images/mask-1769431469987.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5348258706467662,
+          "y": 0.47201492537313433
+        },
+        "rightEye": {
+          "x": 0.40298507462686567,
+          "y": 0.47574626865671643
+        }
+      }
     }
   ]
 }
