Update manifest: add iPhone-Jan26-1244

--- a/groups/g_L3g2nnyS4nDc/manifest.json
+++ b/groups/g_L3g2nnyS4nDc/manifest.json
@@ -62,6 +62,21 @@
           "y": 0.47574626865671643
         }
       }
+    },
+    {
+      "id": "mask-1769431477960",
+      "name": "iPhone-Jan26-1244",
+      "image": "groups/g_L3g2nnyS4nDc/images/mask-1769431477960.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5091210613598673,
+          "y": 0.43718905472636815
+        },
+        "rightEye": {
+          "x": 0.35655058043117743,
+          "y": 0.43967661691542287
+        }
+      }
     }
   ]
 }
