Update manifest: add iPhone-Jan26-1245

--- a/groups/g_L3g2nnyS4nDc/manifest.json
+++ b/groups/g_L3g2nnyS4nDc/manifest.json
@@ -92,6 +92,21 @@
           "y": 0.5607524803504703
         }
       }
+    },
+    {
+      "id": "mask-1769431497549",
+      "name": "iPhone-Jan26-1245",
+      "image": "groups/g_L3g2nnyS4nDc/images/mask-1769431497549.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.4395637643391732,
+          "y": 0.45341071631539887
+        },
+        "rightEye": {
+          "x": 0.3864013266998341,
+          "y": 0.4527363184079602
+        }
+      }
     }
   ]
 }
