Update manifest: add iPhone-Jan26-1245

--- a/groups/g_L3g2nnyS4nDc/manifest.json
+++ b/groups/g_L3g2nnyS4nDc/manifest.json
@@ -137,6 +137,21 @@
           "y": 0.4098258706467661
         }
       }
+    },
+    {
+      "id": "mask-1769431525321",
+      "name": "iPhone-Jan26-1245",
+      "image": "groups/g_L3g2nnyS4nDc/images/mask-1769431525321.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5729274194973654,
+          "y": 0.39849983483953966
+        },
+        "rightEye": {
+          "x": 0.44368603931928496,
+          "y": 0.3942518611882681
+        }
+      }
     }
   ]
 }
