--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -15,6 +15,21 @@
           "y": 0.5382541140116897
         }
       }
+    },
+    {
+      "id": "mask-1769453708770",
+      "name": "iPhone-Jan26-1854",
+      "image": "groups/public/images/mask-1769453708770.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6028192371475953,
+          "y": 0.5298584692524085
+        },
+        "rightEye": {
+          "x": 0.4220563847429519,
+          "y": 0.535921990467445
+        }
+      }
     }
   ]
 }
