Update manifest: add iPhone-Jan26-2008

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -30,6 +30,21 @@
           "y": 0.6409379579872985
         }
       }
+    },
+    {
+      "id": "mask-1769458106980",
+      "name": "iPhone-Jan26-2008",
+      "image": "groups/public/images/mask-1769458106980.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6053067993366501,
+          "y": 0.6380430259277351
+        },
+        "rightEye": {
+          "x": 0.4311774461028192,
+          "y": 0.635148093868172
+        }
+      }
     }
   ]
 }
