Update manifest: add iPhone-Jan26-2019

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -30,6 +30,21 @@
           "y": 0.635148093868172
         }
       }
+    },
+    {
+      "id": "mask-1769458737270",
+      "name": "iPhone-Jan26-2019",
+      "image": "groups/public/images/mask-1769458737270.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5735251937899211,
+          "y": 0.6794175975572753
+        },
+        "rightEye": {
+          "x": 0.4119352872299819,
+          "y": 0.6755268602330776
+        }
+      }
     }
   ]
 }
