Update manifest: add iPhone-Jan26-2024

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -45,6 +45,21 @@
           "y": 0.6755268602330776
         }
       }
+    },
+    {
+      "id": "mask-1769459043581",
+      "name": "iPhone-Jan26-2024",
+      "image": "groups/public/images/mask-1769459043581.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.578111377199082,
+          "y": 0.6820572108304789
+        },
+        "rightEye": {
+          "x": 0.3937977780078016,
+          "y": 0.6758207257578399
+        }
+      }
     }
   ]
 }
