Update manifest: add Mac-Jan26-2042

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -45,6 +45,21 @@
           "y": 0.6758207257578399
         }
       }
+    },
+    {
+      "id": "mask-1769460175872",
+      "name": "Mac-Jan26-2042",
+      "image": "groups/public/images/mask-1769460175872.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.554,
+          "y": 0.45649932030187973
+        },
+        "rightEye": {
+          "x": 0.39599999999999996,
+          "y": 0.4549992968640135
+        }
+      }
     }
   ]
 }
