Update manifest: add Mac-Jan26-2054

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -45,6 +45,21 @@
           "y": 0.45799934373974593
         }
       }
+    },
+    {
+      "id": "mask-1769460841787",
+      "name": "Mac-Jan26-2054",
+      "image": "groups/public/images/mask-1769460841787.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.538,
+          "y": 0.375498054657104
+        },
+        "rightEye": {
+          "x": 0.448,
+          "y": 0.3709979843435054
+        }
+      }
     }
   ]
 }
