Update manifest: add Mac-Jan26-2055

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -75,6 +75,21 @@
           "y": 0.3769980780949702
         }
       }
+    },
+    {
+      "id": "mask-1769460932002",
+      "name": "Mac-Jan26-2055",
+      "image": "groups/public/images/mask-1769460932002.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.53,
+          "y": 0.38899826559789996
+        },
+        "rightEye": {
+          "x": 0.45,
+          "y": 0.39049828903576617
+        }
+      }
     }
   ]
 }
