Update manifest: add Mac-Jan26-2056

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -90,6 +90,21 @@
           "y": 0.39049828903576617
         }
       }
+    },
+    {
+      "id": "mask-1769460968379",
+      "name": "Mac-Jan26-2056",
+      "image": "groups/public/images/mask-1769460968379.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.526,
+          "y": 0.3739980312192378
+        },
+        "rightEye": {
+          "x": 0.452,
+          "y": 0.3664979140299067
+        }
+      }
     }
   ]
 }
