Update manifest: add Mac-Jan26-2056

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -105,6 +105,21 @@
           "y": 0.3664979140299067
         }
       }
+    },
+    {
+      "id": "mask-1769460997530",
+      "name": "Mac-Jan26-2056",
+      "image": "groups/public/images/mask-1769460997530.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.528,
+          "y": 0.39349833591149863
+        },
+        "rightEye": {
+          "x": 0.45,
+          "y": 0.39049828903576617
+        }
+      }
     }
   ]
 }
