--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -75,6 +75,21 @@
           "y": 0.3994984296629635
         }
       }
+    },
+    {
+      "id": "mask-1769461651604",
+      "name": "Mac-Jan26-2106",
+      "image": "groups/public/images/mask-1769461651604.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.518,
+          "y": 0.4009984531008297
+        },
+        "rightEye": {
+          "x": 0.464,
+          "y": 0.3994984296629635
+        }
+      }
     }
   ]
 }
