--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -75,6 +75,21 @@
           "y": 0.4939999062485351
         }
       }
+    },
+    {
+      "id": "mask-1769463230997",
+      "name": "Mac-Jan26-2133",
+      "image": "groups/public/images/mask-1769463230997.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.646,
+          "y": 0.4714995546805419
+        },
+        "rightEye": {
+          "x": 0.38400000000000006,
+          "y": 0.5
+        }
+      }
     }
   ]
 }
