Update manifest: add Mac-Jan26-2133

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -90,6 +90,21 @@
           "y": 0.5
         }
       }
+    },
+    {
+      "id": "mask-1769463281451",
+      "name": "Mac-Jan26-2133",
+      "image": "groups/public/images/mask-1769463281451.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.636,
+          "y": 0.48049969530773917
+        },
+        "rightEye": {
+          "x": 0.39399999999999996,
+          "y": 0.5
+        }
+      }
     }
   ]
 }
