Update manifest: add Mac-Jan26-2137

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -90,6 +90,21 @@
           "y": 0.47899967186987297
         }
       }
+    },
+    {
+      "id": "mask-1769463464815",
+      "name": "Mac-Jan26-2137",
+      "image": "groups/public/images/mask-1769463464815.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.564,
+          "y": 0.4939999062485351
+        },
+        "rightEye": {
+          "x": 0.434,
+          "y": 0.4939999062485351
+        }
+      }
     }
   ]
 }
