Update manifest: add Mac-Jan26-2142

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -120,6 +120,21 @@
           "y": 0.44899920311254865
         }
       }
+    },
+    {
+      "id": "mask-1769463742482",
+      "name": "Mac-Jan26-2142",
+      "image": "groups/public/images/mask-1769463742482.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.57,
+          "y": 0.4429991093610838
+        },
+        "rightEye": {
+          "x": 0.45,
+          "y": 0.42499882810668915
+        }
+      }
     }
   ]
 }
