Update manifest: add Mac-Jan26-2154

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -150,6 +150,21 @@
           "y": 0.42499882810668915
         }
       }
+    },
+    {
+      "id": "mask-1769464498010",
+      "name": "Mac-Jan26-2154",
+      "image": "groups/public/images/mask-1769464498010.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.464,
+          "y": 0.5045000703135987
+        },
+        "rightEye": {
+          "x": 0.34800000000000003,
+          "y": 0.5
+        }
+      }
     }
   ]
 }
