--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -165,6 +165,21 @@
           "y": 0.5
         }
       }
+    },
+    {
+      "id": "mask-1769464763963",
+      "name": "Mac-Jan26-2159",
+      "image": "groups/public/images/mask-1769464763963.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.482,
+          "y": 0.5075001171893311
+        },
+        "rightEye": {
+          "x": 0.342,
+          "y": 0.4984999765621338
+        }
+      }
     }
   ]
 }
