--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -195,6 +195,21 @@
           "y": 0.4894998359349365
         }
       }
+    },
+    {
+      "id": "mask-1769465076575",
+      "name": "Mac-Jan26-2204",
+      "image": "groups/public/images/mask-1769465076575.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5559999999999999,
+          "y": 0.4549992968640135
+        },
+        "rightEye": {
+          "x": 0.38599999999999995,
+          "y": 0.45949936717761214
+        }
+      }
     }
   ]
 }
