Update manifest: add Mac-Jan26-2206

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -240,6 +240,21 @@
           "y": 0.45349927342614726
         }
       }
+    },
+    {
+      "id": "mask-1769465185434",
+      "name": "Mac-Jan26-2206",
+      "image": "groups/public/images/mask-1769465185434.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5559999999999999,
+          "y": 0.45049922655041486
+        },
+        "rightEye": {
+          "x": 0.426,
+          "y": 0.45349927342614726
+        }
+      }
     }
   ]
 }
