Update manifest: add Mac-Jan26-2231

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -150,6 +150,21 @@
           "y": 0.49549992968640133
         }
       }
+    },
+    {
+      "id": "mask-1769466674580",
+      "name": "Mac-Jan26-2231",
+      "image": "groups/public/images/mask-1769466674580.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.62,
+          "y": 0.4924998828106689
+        },
+        "rightEye": {
+          "x": 0.39399999999999996,
+          "y": 0.4969999531242676
+        }
+      }
     }
   ]
 }
