Update manifest: add iPhone-Jan26-2240

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -135,6 +135,21 @@
           "y": 0.41671037252860116
         }
       }
+    },
+    {
+      "id": "mask-1769467208915",
+      "name": "iPhone-Jan26-2240",
+      "image": "groups/public/images/mask-1769467208915.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5124378109452736,
+          "y": 0.5012437810945273
+        },
+        "rightEye": {
+          "x": 0.34577114427860695,
+          "y": 0.4888059701492537
+        }
+      }
     }
   ]
 }
