Update manifest: add iPhone-Jan26-2240

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -150,6 +150,21 @@
           "y": 0.4888059701492537
         }
       }
+    },
+    {
+      "id": "mask-1769467240345",
+      "name": "iPhone-Jan26-2240",
+      "image": "groups/public/images/mask-1769467240345.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5074626865671642,
+          "y": 0.5217661691542288
+        },
+        "rightEye": {
+          "x": 0.3598673300165837,
+          "y": 0.5087064676616915
+        }
+      }
     }
   ]
 }
