Update manifest: add iPhone-Jan26-2241

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -165,6 +165,21 @@
           "y": 0.5087064676616915
         }
       }
+    },
+    {
+      "id": "mask-1769467264488",
+      "name": "iPhone-Jan26-2241",
+      "image": "groups/public/images/mask-1769467264488.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5074626865671642,
+          "y": 0.5217661691542288
+        },
+        "rightEye": {
+          "x": 0.34660033167495846,
+          "y": 0.5105721393034826
+        }
+      }
     }
   ]
 }
