Update manifest: add iPhone-Jan26-2242

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -135,6 +135,21 @@
           "y": 0.5105721393034826
         }
       }
+    },
+    {
+      "id": "mask-1769467348553",
+      "name": "iPhone-Jan26-2242",
+      "image": "groups/public/images/mask-1769467348553.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5559999999999999,
+          "y": 0.45049922655041486
+        },
+        "rightEye": {
+          "x": 0.40215588723051404,
+          "y": 0.457089552238806
+        }
+      }
     }
   ]
 }
