--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -135,6 +135,21 @@
           "y": 0.457089552238806
         }
       }
+    },
+    {
+      "id": "mask-1769470674535",
+      "name": "Mac-Jan26-2337",
+      "image": "groups/public/images/mask-1769470674535.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.34800000000000003,
+          "y": 0.5780012187690433
+        },
+        "rightEye": {
+          "x": 0.274,
+          "y": 0.576501195331177
+        }
+      }
     }
   ]
 }
