Update manifest: add Mac-Jan26-2344

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -165,6 +165,21 @@
           "y": 0.5030000468757324
         }
       }
+    },
+    {
+      "id": "mask-1769471071542",
+      "name": "Mac-Jan26-2344",
+      "image": "groups/public/images/mask-1769471071542.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.61,
+          "y": 0.5090001406271973
+        },
+        "rightEye": {
+          "x": 0.37800000000000006,
+          "y": 0.5135002109407959
+        }
+      }
     }
   ]
 }
