Update manifest: add Mac-Jan27-0001

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -210,6 +210,21 @@
           "y": 0.5330005156330567
         }
       }
+    },
+    {
+      "id": "mask-1769472095534",
+      "name": "Mac-Jan27-0001",
+      "image": "groups/public/images/mask-1769472095534.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.582,
+          "y": 0.5255003984437256
+        },
+        "rightEye": {
+          "x": 0.416,
+          "y": 0.5315004921951906
+        }
+      }
     }
   ]
 }
