--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -150,6 +150,21 @@
           "y": 0.5315004921951906
         }
       }
+    },
+    {
+      "id": "mask-1769473389839",
+      "name": "Mac-Jan27-0023",
+      "image": "groups/public/images/mask-1769473389839.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.568,
+          "y": 0.5495007734495851
+        },
+        "rightEye": {
+          "x": 0.37800000000000006,
+          "y": 0.5570008906389162
+        }
+      }
     }
   ]
 }
