Update manifest: add Mac-Jan27-0024

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -180,6 +180,21 @@
           "y": 0.5435006796981203
         }
       }
+    },
+    {
+      "id": "mask-1769473450246",
+      "name": "Mac-Jan27-0024",
+      "image": "groups/public/images/mask-1769473450246.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5559999999999999,
+          "y": 0.5450007031359865
+        },
+        "rightEye": {
+          "x": 0.414,
+          "y": 0.5510007968874514
+        }
+      }
     }
   ]
 }
