Update manifest: add Mac-Jan27-0040

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -165,6 +165,21 @@
           "y": 0.5568068197982774
         }
       }
+    },
+    {
+      "id": "mask-1769503637668",
+      "name": "Mac-Jan27-0040",
+      "image": "groups/public/images/mask-1769503637668.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5764724015164314,
+          "y": 0.5548855145664621
+        },
+        "rightEye": {
+          "x": 0.43034104410662527,
+          "y": 0.557929917845833
+        }
+      }
     }
   ]
 }
