Update manifest: add iPhone-Jan27-1041

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -150,6 +150,21 @@
           "y": 0.48631840796019893
         }
       }
+    },
+    {
+      "id": "mask-1769510465879",
+      "name": "iPhone-Jan27-1041",
+      "image": "groups/public/images/mask-1769510465879.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5174129353233831,
+          "y": 0.5043532338308456
+        },
+        "rightEye": {
+          "x": 0.31674958540630177,
+          "y": 0.48631840796019893
+        }
+      }
     }
   ]
 }
