Update manifest: add Mac-Jan27-1321

--- a/groups/f_uQjqy8z7DGxp/manifest.json
+++ b/groups/f_uQjqy8z7DGxp/manifest.json
@@ -32,6 +32,21 @@
           "y": 0.3826421264278928
         }
       }
+    },
+    {
+      "id": "mask-1769520103323",
+      "name": "Mac-Jan27-1321",
+      "image": "groups/f_uQjqy8z7DGxp/images/mask-1769520103323.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5700000000000001,
+          "y": 0.3819350847345279
+        },
+        "rightEye": {
+          "x": 0.38,
+          "y": 0.3918336684416359
+        }
+      }
     }
   ]
 }
