--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -47,6 +47,21 @@
           "y": 0.37999999999999995
         }
       }
+    },
+    {
+      "id": "mask-1769637211958",
+      "name": "iPhone-Jan28-2153",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769637211958.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.65,
+          "y": 0.38
+        },
+        "rightEye": {
+          "x": 0.35,
+          "y": 0.38
+        }
+      }
     }
   ]
 }
