Update manifest: add iPhone-Jan28-2154

--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -122,6 +122,21 @@
           "y": 0.38
         }
       }
+    },
+    {
+      "id": "mask-1769638527514",
+      "name": "iPhone-Jan28-2154",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769638527514.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.673866447624263,
+          "y": 0.5035622326452545
+        },
+        "rightEye": {
+          "x": 0.35546688570907026,
+          "y": 0.5311044340214124
+        }
+      }
     }
   ]
 }
